--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,12 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
+			<plugin>
+				<groupId>com.google.appengine</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>1.9.9</version>
+			</plugin>
+			</plugins>
 	</build>
 
 </project>
