Configuracoes conexao cloudSql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/saude
+spring.datasource.url=jdbc:mysql://google/saude?cloudSqlInstance=double-venture-270816:us-central1:eldorado-saude&amp;socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.datasource.username=saude
 spring.datasource.password=saude
+
+
+
+
