--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://google/saude?cloudSqlInstance=double-venture-270816:us-central1:eldorado-saude&amp;socketFactory=com.google.cloud.sql.mysql.SocketFactory
+# database init, supports mysql too
+database=mysql
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://google/saude?cloudSqlInstance=double-venture-270816:us-central1:eldorado-saude&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.datasource.username=saude
 spring.datasource.password=saude
-
-
-
-
