--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,11 @@
 			<artifactId>mysql-socket-factory</artifactId>
 			<version>1.0.15</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.cloud.sql</groupId>
+			<artifactId>mysql-socket-factory-connector-j-8</artifactId>
+			<version>1.0.15</version>
+		</dependency>
 	</dependencies>
 
 	<build>
