--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 database=mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql:///saude?cloudSqlInstance=cloudSqlInstance=double-venture-270816:us-central1:eldorado-saude&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+spring.datasource.url=jdbc:mysql:///saude?cloudSqlInstance=cloudSqlInstance=double-venture-270816:us-central1:eldorado&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.datasource.username=saude
 spring.datasource.password=saude
 # Uncomment this the first time the app runs
