--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql:///saude?cloudSqlInstance=double-venture-270816:us-central1:eldorado&socketFactory=com.google.cloud.sql.mysql.SocketFactory
-spring.datasource.username=saude
-spring.datasource.password=saude
+spring.datasource.username=root
+spring.datasource.password=zOw37enLr89ev3mg
 # Uncomment this the first time the app runs
 
 
