--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql:///saude?cloudSqlInstance=double-venture-270816:us-central1:eldorado&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=false&user=root
+spring.datasource.url=jdbc:mysql:///saude?cloudSqlInstance=double-venture-270816:us-central1:eldorado&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=false&user=root&password=zOw37enLr89ev3mg
 spring.datasource.username=root
 spring.datasource.password=zOw37enLr89ev3mg
 # Uncomment this the first time the app runs
