--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,10 @@
+
+runtime: java
+env: flex
+
+handlers:
+  - url: /.*
+    script: this field is required, but ignored
+
 beta_settings:
   cloud_sql_instances: cloudSqlInstance=double-venture-270816:us-central1:agendamento
