--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
 		<version>2.2.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
+	<appengine-web-app xmlns="http://appengine.google.com/ns/1.0">
+		<application>agendamentoMedico</application>
+		<version>001</version>
+		<threadsafe>true</threadsafe>
+		<runtime>java8</runtime>
+	</appengine-web-app>
+
 	<groupId>com.saude</groupId>
 	<artifactId>agendamentoMedico</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
