--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://35.184.155.7/saude
-#spring.datasource.url=jdbc:mysql:///saude?cloudSqlInstance=double-venture-270816:us-central1:agendamento&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=false&user=root&password=zOw37enLr89ev3mg
+#spring.datasource.url=jdbc:mysql://35.184.155.7/saude
+spring.datasource.url=jdbc:mysql:///saude?cloudSqlInstance=double-venture-270816:us-central1:agendamento&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=false&user=root&password=zOw37enLr89ev3mg
 spring.datasource.username=root
 spring.datasource.password=root
 # Uncomment this the first time the app runs
