--- a/pom.xml
+++ b/pom.xml
@@ -78,16 +78,16 @@
 			<artifactId>mysql-socket-factory-connector-j-8</artifactId>
 			<version>1.0.15</version>
 		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>28.2-jre</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.appengine</groupId>
-			<artifactId>appengine-api-1.0-sdk</artifactId>
-			<version> 1.9.48 </version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.google.guava</groupId>-->
+<!--			<artifactId>guava</artifactId>-->
+<!--			<version>28.2-jre</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.google.appengine</groupId>-->
+<!--			<artifactId>appengine-api-1.0-sdk</artifactId>-->
+<!--			<version> 1.9.48 </version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
