--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,11 @@
 <!--			<artifactId>guava</artifactId>-->
 <!--			<version>28.2-jre</version>-->
 <!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>com.google.appengine</groupId>-->
-<!--			<artifactId>appengine-api-1.0-sdk</artifactId>-->
-<!--			<version> 1.9.48 </version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>com.google.appengine</groupId>
+			<artifactId>appengine-api-1.0-sdk</artifactId>
+			<version> 1.9.48 </version>
+		</dependency>
 	</dependencies>
 
 	<build>
