--- a/pom.xml
+++ b/pom.xml
@@ -78,11 +78,11 @@
 			<artifactId>mysql-socket-factory-connector-j-8</artifactId>
 			<version>1.0.15</version>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>com.google.guava</groupId>-->
-<!--			<artifactId>guava</artifactId>-->
-<!--			<version>28.2-jre</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>28.2-jre</version>
+		</dependency>
 		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-api-1.0-sdk</artifactId>
@@ -99,7 +99,7 @@
 			<plugin>
 				<groupId>com.google.appengine</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
-				<version>1.9.76</version>
+				<version>1.9.77</version>
 			</plugin>
 			</plugins>
 	</build>
