--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>2.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.appengine</groupId>
