--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.2.5.RELEASE</version>
 			</plugin>
 			<plugin>
 				<groupId>com.google.appengine</groupId>
